# Classificador-de-vagas-NLP

./: .gitignore  README.md  atualizar_senioridade.py  converter_datas_antigas.py  main.py  model_predict.py  model_train.py  pyproject.toml  requirements.txt  web_scraping.py
data/processed/: posts_com_label.csv  posts_com_labels.xlsx  posts_com_labels_antigo.xlsx  posts_com_predicoes_treino.csv  posts_preditos.csv  treino_label.csv  treino_senioridade.csv
data/raw/: posts_com_labels.xlsx  posts_linkedin.csv  posts_treino.xlsx
fixes/: atualizar_senioridade.py  converter_datas_antigas.py  filtrar_e_juntar_datasets.py  padronizar_todas_datas.py  teste_filtro_duplicatas.py
graphs/: graficos.pbix
models/: encoder_regex.pkl  model_labels.pkl  model_sen.pkl
raw/: posts_linkedin.csv
src/driver/: cookies.py  driver_setup.py
src/nlp/: model_utils.py
src/scraping/: filters.py  post_scraper.py
src/scraping/scraping_utils/: cookies.py  csv_storage.py  driver_setup.py  extract_post_data.py  extract_post_information.py  filtrar_posts_duplicados.py  post_filters.py  scrolling.py  text_cleaning.py  waits.py
