[project]
name = "linkedin-scraper-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "git-filter-repo>=2.47.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "selenium>=4.38.0",
    "sentence-transformers>=5.1.2",
]
